<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL" Id="{368b58ee-75f8-4374-a7bb-f1c5567c7f5b}">
    <Declaration><![CDATA[VAR_GLOBAL
	Power_Execute 		: BOOL;							// 上电使能控制信号
	Home_Execute		: BOOL;							// 设置零点程序使能
	Reset_Execute		: BOOL;							// 电机驱动重置动作发生使能
	ExSetPoint_Execute	: BOOL;							// 机器人外部信号发生使能
	
	// ====================Simulink模块相关=====================
	Robot_Simulink		: FB_Welding_Control_Circle_86s(oid:=16#01010020);	// Simulink模型定义
	T_ALL				: LREAL:=100;						// Simulink模型运动总时长
	t_Interval			: LREAL:=0.001;						// 取样时间间隔，默认为1ms
	t					: LREAL:=0;							// 取样当前时间变量，以0为起点
	
	Filter_Current  : FB_Filter_Current_Hexapod_Robot(oid:=16#01010030);

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>